2010-08-27  Ben Abbott <bpabbott@mac.com>

	* plot/private/__ghostscript__.m: Don't set anti-aliasing options for
	vector formats.
	* plot/__print_parse_opts__.m: Fix tests.

2010-08-27  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* plot/__go_draw_axes__.m (__calc_dimensions__): Delete.
	* plot/__actual_axis_position__.m (__calc_dimensions__): Delete.

2010-08-27  Pascal A. Dupuis  <Pascal.Dupuis@worldonline.be>

	* plot/hold.m: If arg is axis handle, get corresponding figure
	handle from axis parent property.

2010-08-27  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_print__.m: Properly restore fontsize after eps output.
	* plot/plotyy.m: Modified demo for changeset 10912 9abc67b4bd4f.
	* plot/__fltk_print__.m, plot/__go_draw_axes__.m,
	plot/__go_draw_figure__.m, plot/__gnuplot_print__.m,
	plot/gnuplot_drawnow.m, plot/print.m, plot/private/__ghostscript__.m,
	plot/private/__tight_eps_bbox__.m: Unify gnuplot printing with the
	the fltk backend. Turn figure background color off when printing.
	Improve the axes font spacing for most gnuplot terminals.

2010-08-26  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: For yaxislocation == 'right' associate text
	position with 'second' coordinate system.

2010-08-25  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Revert erroneous portion of changeset
	10910 40cf7cc4ea62.

2010-08-24  Ben Abbott <bpabbott@mac.com>

	* plot/private/__actual_axis_position__.m, plot/__go_draw_axes__.m:
	Properly interpret plotboxaspectratio when 3D objects are viewed as 2D.
	* /plot/colorbar.m: Add demo.

2010-08-23  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp2.m: Don't use bicubic for consistency (can't handle
	non-grid interpolation).

2010-08-17  Rik <octave@nomad.inbox5.com>

	* general/randi.m: Add IMAX check for class "single" numbers.

2010-08-15  Rik <octave@nomad.inbox5.com>

	* general/randi.m: Add new script for random integers.
	* general/module.mk: Add randi to build file list.